--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.32",
+    "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.10"
   }
 }
